# FastAPI_lessons

./: .gitignore  main.py  pyproject.toml  requirements.txt  requiriments.txt
alembic/: env.py
alembic/versions/: 0cc09e456d56_auto_vote.py  129555b1c7d6_add_content_column_to_post_table.py  3359e1edbb1f_add_fk_to_post_table.py  6e626d5ddfcc_add_last_few_columns.py  95d6a65fdc7a_add_phone_number_on_users.py  9e7c4381ebcb_create_post_table.py  f99f01728a4a_add_user_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
